# charles-mcp

./: .gitignore  Cargo.toml  README.md  TODO.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  format.rs  lib.rs  main.rs  replay.rs  server.rs
src/session/: body.rs  chlsj.rs  classify.rs  convert.rs  grpc.rs  har.rs  mod.rs  protobuf.rs  sniff.rs  websocket.rs
src/store/: mod.rs  schema.rs
src/tools/: inspect.rs  mod.rs  rules.rs
src/web/: control.rs  discovery.rs  live.rs  mod.rs
tests/: body_decode.rs  chlsj_parser.rs  convert_real.rs  discovery.rs  edge_cases.rs  filters.rs  har_parser.rs  protobuf_decode.rs  sniff.rs  store.rs  websocket_decode.rs
tests/fixtures/: control_page.html  sample.chlsj  sample.har  throttling_page.html  ws_piesocket_recv.b64
