[package]
name = "charles-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
brotli = "8.0.4"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
encoding_rs = "0.8.35"
flate2 = "1.1.9"
mime = "0.3.17"
prost = { version = "0.14.4", optional = true }
prost-reflect = { version = "0.16.4", features = ["serde"], optional = true }
protox = { version = "0.9.1", optional = true }
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["gzip", "deflate", "brotli", "json", "socks", "charset", "form"] }
rmcp = { version = "1.8.0", features = ["server", "macros", "transport-io"] }
# Bundled SQLite (includes FTS5) for the traffic store. `bundled` builds SQLite
# from source, so a C compiler is required at build time.
rusqlite = { version = "0.37.0", features = ["bundled"] }
sha2 = "0.10.9"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"

[features]
default = ["proto"]
# Named protobuf/gRPC decoding via .proto files (pure-Rust; no protoc). The
# schemaless decoder and gRPC framing work without this feature.
proto = ["dep:protox", "dep:prost-reflect", "dep:prost"]
